syntax = "proto3";

package greeting.v1;

import "google/api/annotations.proto";

option go_package = "github.com/viktor-titov/grpc-gateway-example/internal/services/grpc/greeting/v1;greetingv1";

// The greeting service definition
service GreeterService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {
      get: "/v1/sayhello"
    };
  }
}

// The request message containing the user's name
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings
message SayHelloResponse {
  string message = 1;
}